If you find issues in the example source, please contact
pmartz@opengldistilled.com. I'll ensure that major issues are resolved
and the example source updated accordingly.


HISTORY

r4, 15 November 2008
 - Added build system support for 64-bit Linux.
 - Added runDemos script to replace runDemosMac,
   runDemosLinux, and runDemosCygwin.

r3, 13 November 2008
 - Fixed version check in SimpleExample.cpp. Thanks to Craig Harrison
   and others for reporting this.

Two older versions were made available prior to the move to
the Google Code repository:

Version 01, May 2006
 - Added changes from Matt Gadda for the Apple-specific portion
   of the Platform example. Resolves Issue0003.
 - Incorporated changes from Bob Kuehne for Intel Mac.
 - Misc minor code and comment changes.

Version 00, 5 March 2006
 - First release.