@@ -5,7 +5,10 @@ and the example source updated accordingly.
 
 HISTORY
 
-r4, 15 November 2008
+r13, 15 November 2008
+ - Fix several memory leaks in the Platform.cpp example.
+
+r12, 15 November 2008
  - Added build system support for 64-bit Linux.
  - Added runDemos script to replace runDemosMac,
    runDemosLinux, and runDemosCygwin.
